--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "vite-plugin-pwa": "^0.4.6"
   },
   "devDependencies": {
+    "@types/touch-events": "0.0.27",
     "typescript": "^4.1.3",
     "vite": "^2.0.0-beta.65"
   }
